Version 0.25 - 10 September 2007, by Pascal "Pixel" Rigaux

- in the list of available Xorg drivers, add "Driver" from Cards+
  (will ease the maintainance of the list of drivers in Xconfig/card.pm)
- minimal support for allowing to choose evdev on all mice

Version 0.24 - 7 September 2007, by Pascal "Pixel" Rigaux

- do not configure XFS, it's useless
- fix default_headers (ie allow XFdrake to create xorg.conf from scratch again)
- keep the order from MonitorsDB file 
  (allows "Flat Panel 800x600" to be before "Flat Panel 1024x768")
  (needs a nicely sorted MonitorsDB though)

Version 0.23 - 6 September 2007, by Pascal "Pixel" Rigaux

- do not start xfs for the test (#33219)

Version 0.22 - 27 August 2007, by Pascal "Pixel" Rigaux

- do configure XFS if installed
- when removing/replacing an InputDevice section, ensure we remove the
  corresponding entry in ServerLayout. ie do not rely on InputDevice sections
  to use XFdrake-compatible Identifiers (as suggested by fcrozat)
- add avivo in the Xorg drivers list
- handle libglx.so provided by standard.conf alternative
- handle x11-driver-video-fglrx instead of ati

Version 0.21 - 8 August 2007, by Pascal "Pixel" Rigaux

- handle nvidia-current instead of nvidia97xx (thanks to Anssi)
- handle x11-driver-video-$nvidia instead of $nvidia
- adapt to kbd instead of console-tools: s/kmap/map/

Version 0.20 - 3 August 2007, by Pascal "Pixel" Rigaux

- fix detection of touchpad on some kernels (#31584)
  (need drakxtools-backend >= 10.4.145)
- internal: add many options as having to be used only once, easing their use
  and fixing setting them 
  (eg #31942 where one can't click "Options" after setting EXA)
- drop support for installing/configuring 915resolution 
  (no more needed since x11-driver-video-intel 2.0)
- do not configure using xfs anymore (#32051)

Version 0.19 - 9 July 2007, by Pascal "Pixel" Rigaux

- wacom configuration: 
  o enhance configuration by using /dev/input/by-id/xxx