@@ -1,3 +1,5 @@
+- handle fglrx-hd2000 driver
+
 Version 0.25 - 10 September 2007, by Pascal "Pixel" Rigaux
 
 - in the list of available Xorg drivers, add "Driver" from Cards+
